--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <a href="board_layout.html">goto board layout</a>
             </div>
 
+            <h2>bentwood ring calculator</h2>
+            <div>
+                <a href="bentwood.html">goto bentwood ring calculator</a>
+            </div>
+
             <div class="d-print-none">
                 <h2>About</h2>
                 <a href="https://github.com/mru00/board-layout">Repository</a>
